# apma_2822b

./: .gitignore  README.md  username  vector_uvm.h
final/: .ccls  CMakeLists.txt
final/double_cpu/: data.csv  full_run.txt  miniFE.120x120x120.P1.2019:05:20-02:47:45.yaml  miniFE.120x120x120.P2.2019:05:20-02:50:34.yaml  miniFE.120x120x120.P3.2019:05:20-02:58:25.yaml  miniFE.120x120x120.P4.2019:05:20-03:11:24.yaml  miniFE.120x120x120.P5.2019:05:20-03:35:26.yaml  miniFE.160x160x160.P1.2019:05:20-02:48:09.yaml  miniFE.160x160x160.P2.2019:05:20-02:50:53.yaml  miniFE.160x160x160.P3.2019:05:20-02:58:43.yaml  miniFE.160x160x160.P4.2019:05:20-03:11:44.yaml  miniFE.200x200x200.P1.2019:05:20-02:48:57.yaml  miniFE.200x200x200.P2.2019:05:20-02:51:28.yaml  miniFE.200x200x200.P3.2019:05:20-02:59:16.yaml  miniFE.200x200x200.P4.2019:05:20-03:12:17.yaml  miniFE.240x240x240.P1.2019:05:20-02:50:18.yaml  miniFE.240x240x240.P2.2019:05:20-02:52:28.yaml  miniFE.240x240x240.P3.2019:05:20-03:00:12.yaml  miniFE.240x240x240.P4.2019:05:20-03:13:10.yaml  miniFE.280x280x280.P2.2019:05:20-02:54:03.yaml  miniFE.280x280x280.P2.2019:05:20-02:55:39.yaml  miniFE.280x280x280.P3.2019:05:20-03:01:38.yaml  miniFE.280x280x280.P4.2019:05:20-03:14:31.yaml  miniFE.320x320x320.P2.2019:05:20-02:58:04.yaml  miniFE.320x320x320.P3.2019:05:20-03:03:46.yaml  miniFE.320x320x320.P4.2019:05:20-03:16:30.yaml  miniFE.360x360x360.P3.2019:05:20-03:06:47.yaml  miniFE.360x360x360.P4.2019:05:20-03:19:19.yaml  miniFE.400x400x400.P3.2019:05:20-03:10:59.yaml  miniFE.400x400x400.P4.2019:05:20-03:23:10.yaml  miniFE.40x40x40.P1.2019:05:20-02:47:32.yaml  miniFE.40x40x40.P2.2019:05:20-02:50:20.yaml  miniFE.40x40x40.P3.2019:05:20-02:58:08.yaml  miniFE.40x40x40.P4.2019:05:20-03:11:04.yaml  miniFE.40x40x40.P5.2019:05:20-03:35:01.yaml  miniFE.440x440x440.P4.2019:05:20-03:28:17.yaml  miniFE.480x480x480.P4.2019:05:20-03:34:52.yaml  miniFE.80x80x80.P1.2019:05:20-02:47:35.yaml  miniFE.80x80x80.P2.2019:05:20-02:50:24.yaml  miniFE.80x80x80.P3.2019:05:20-02:58:14.yaml  (+2 more)
final/double_gpu/: data.csv  full_run.txt
final/double_gpu_fixed/: data.csv
final/double_standard/: miniFE.120x120x120.P1.2019:05:20-01:57:42.yaml  miniFE.120x120x120.P2.2019:05:20-01:59:21.yaml  miniFE.120x120x120.P3.2019:05:20-02:02:43.yaml  miniFE.120x120x120.P4.2019:05:20-02:07:19.yaml  miniFE.120x120x120.P5.2019:05:20-02:14:02.yaml  miniFE.160x160x160.P1.2019:05:20-01:57:57.yaml  miniFE.160x160x160.P2.2019:05:20-01:59:30.yaml  miniFE.160x160x160.P3.2019:05:20-02:02:50.yaml  miniFE.160x160x160.P4.2019:05:20-02:07:25.yaml  miniFE.160x160x160.P5.2019:05:20-02:14:11.yaml  miniFE.200x200x200.P1.2019:05:20-01:58:25.yaml  miniFE.200x200x200.P2.2019:05:20-01:59:45.yaml  miniFE.200x200x200.P3.2019:05:20-02:03:03.yaml  miniFE.200x200x200.P4.2019:05:20-02:07:36.yaml  miniFE.240x240x240.P1.2019:05:20-01:59:13.yaml  miniFE.240x240x240.P2.2019:05:20-02:00:10.yaml  miniFE.240x240x240.P3.2019:05:20-02:03:22.yaml  miniFE.240x240x240.P4.2019:05:20-02:07:52.yaml  miniFE.280x280x280.P2.2019:05:20-02:00:52.yaml  miniFE.280x280x280.P2.2019:05:20-02:01:33.yaml  miniFE.280x280x280.P3.2019:05:20-02:03:53.yaml  miniFE.280x280x280.P4.2019:05:20-02:08:16.yaml  miniFE.320x320x320.P2.2019:05:20-02:02:35.yaml  miniFE.320x320x320.P3.2019:05:20-02:04:38.yaml  miniFE.320x320x320.P4.2019:05:20-02:08:52.yaml  miniFE.360x360x360.P3.2019:05:20-02:05:41.yaml  miniFE.360x360x360.P4.2019:05:20-02:09:41.yaml  miniFE.400x400x400.P3.2019:05:20-02:07:10.yaml  miniFE.400x400x400.P4.2019:05:20-02:10:46.yaml  miniFE.40x40x40.P1.2019:05:20-01:57:33.yaml  miniFE.40x40x40.P2.2019:05:20-01:59:15.yaml  miniFE.40x40x40.P3.2019:05:20-02:02:36.yaml  miniFE.40x40x40.P4.2019:05:20-02:07:12.yaml  miniFE.40x40x40.P5.2019:05:20-02:13:54.yaml  miniFE.440x440x440.P4.2019:05:20-02:12:13.yaml  miniFE.80x80x80.P1.2019:05:20-01:57:36.yaml  miniFE.80x80x80.P2.2019:05:20-01:59:17.yaml  miniFE.80x80x80.P3.2019:05:20-02:02:39.yaml  miniFE.80x80x80.P4.2019:05:20-02:07:15.yaml  miniFE.80x80x80.P5.2019:05:20-02:13:57.yaml
final/include/: analytic_soln.hpp  assemble_fe_data.hpp  box.hpp  box_iterator.hpp  box_partition.hpp  box_utils.hpp  cg_solve.hpp  compute_matrix_stats.hpp  csr_matrix.hpp  cuda_sparse_matrix_functions.hpp  cuda_utils.cuh  cuda_utils.hpp  cuda_vector_functions.hpp  dot_op.hpp  driver.hpp  elem_data.hpp  ell_matrix.hpp  exchange_externals.hpp  gauss_pts.hpp  generate_matrix_structure.hpp  get_nodes_coords.hpp  hex_8.hpp  hex_8_box_utils.hpp  hex_8_elem_data.hpp  hex_8_enums.hpp  imbalance.hpp  make_local_matrix.hpp  matrix_algebra_3x3.hpp  matrix_copy_op.hpp  matrix_init_op.hpp  mem_init_op.hpp  minife_version.h  my_timer.hpp  outstream.hpp  param_utils.hpp  parameters.hpp  perform_element_loop.hpp  simple_mesh_description.hpp  sparse_matrix_functions.hpp  time_kernels.hpp  (+11 more)
final/run/: run-large.sh  run-small.sh  run-xlarge.sh
final/scripts/: basic_check.sh  full_run.sh  gen_plots  run_test.sh  scaling.sh
final/single_cpu/: data.csv  full_run.txt  miniFE.120x120x120.P1.2019:05:20-03:38:39.yaml  miniFE.120x120x120.P2.2019:05:20-03:41:02.yaml  miniFE.120x120x120.P3.2019:05:20-03:47:17.yaml  miniFE.120x120x120.P4.2019:05:20-03:57:16.yaml  miniFE.160x160x160.P1.2019:05:20-03:38:59.yaml  miniFE.160x160x160.P2.2019:05:20-03:41:17.yaml  miniFE.160x160x160.P3.2019:05:20-03:47:32.yaml  miniFE.160x160x160.P4.2019:05:20-03:57:32.yaml  miniFE.200x200x200.P1.2019:05:20-03:39:39.yaml  miniFE.200x200x200.P2.2019:05:20-03:41:45.yaml  miniFE.200x200x200.P3.2019:05:20-03:47:58.yaml  miniFE.200x200x200.P4.2019:05:20-03:57:58.yaml  miniFE.240x240x240.P1.2019:05:20-03:40:48.yaml  miniFE.240x240x240.P2.2019:05:20-03:42:32.yaml  miniFE.240x240x240.P3.2019:05:20-03:48:41.yaml  miniFE.240x240x240.P4.2019:05:20-03:58:39.yaml  miniFE.280x280x280.P2.2019:05:20-03:43:48.yaml  miniFE.280x280x280.P2.2019:05:20-03:45:05.yaml  miniFE.280x280x280.P3.2019:05:20-03:49:46.yaml  miniFE.280x280x280.P4.2019:05:20-03:59:41.yaml  miniFE.320x320x320.P2.2019:05:20-03:46:59.yaml  miniFE.320x320x320.P3.2019:05:20-03:51:24.yaml  miniFE.320x320x320.P4.2019:05:20-04:01:09.yaml  (+16 more)
(+179 files in other folders)
